--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@studio-freight/lenis": "^1.0.23",
     "gsap": "^3.11.5",
     "lil-gui": "^0.18.1",
+    "mouse-follower": "^1.1.2",
+    "split-type": "^0.3.3",
     "three": "^0.153.0"
   }
 }
